# imggroup2pdf

./: .gitignore  README.md  pyproject.toml  tox.ini
src/imggroup2pdf/: __init__.py  __main__.py  main.py  none.yaml
