[project]
name = "imggroup2pdf"
version = "0.0.2"
description = "pack images into a pdf"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["image", "pdf"]

authors = [
  {name = "Kevin Rordiguez", email = "kevin4rb200116@gmail.com" } # Optional
]

maintainers = [
  {name = "Kevin Rordiguez", email = "kevin4rb200116@gmail.com" } # Optional
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "rst2pdf"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/kevin4rb200116/imggroup2pdf"
"Bug Reports" = "https://github.com/kevin4rb200116/imggroup2pdf/issues"
"Source" = "https://github.com/kevin4rb200116/imggroup2pdf/"

[project.scripts]
imggroup2pdf = "imggroup2pdf:main"

[tool.setuptools]
package-data = {"imggroup2pdf" = ["*.yaml"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
